add forecast controller and yaml
